--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
         .vertical-desc {
             position: relative;
             top: 86px;
-            color: gray;
+            color: black;
             width: 150px;
             font-size: 9px;
         }
